[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["LeongYuZhi <leong_yu_zhi_andy@students.acsbr.org>"]
description = ""
name = "leongyuzhi"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
replit = "^1.0"
[tool.poetry.dev-dependencies]
